--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tsenniki",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "3 Angular 9 Project",
   "author": "Shegolev",
   "scripts": {
@@ -20,7 +20,7 @@
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.900.1",
+    "@angular-devkit/build-angular": "^0.1000.1",
     "@angular/cli": "~9.0.1",
     "@angular/compiler-cli": "~9.0.0",
     "@types/node": "^12.11.1",
